these pages (m1) have been updated with a functional (for standalone only) nav system... some changes have been made to the style sheet for the UI screens that will need to be included in the production style sheet:
1. vertical spacing has been added to "navcolumn div" and "navcolumn div div"
2. a new class was created, "modulenav", to accomodate the module state indicator (the white bar at the top of the page that provides users a link back to the module home and to the module index)

There are a couple of other tweaks, which todd is tracking, that represent the delta of the SC1.2 css and Scarab css...

PLEASE NOTE: these screens are not built with production grade HTML. I have been updating them myself, and thus there are numerous inconsistencies... although, I have definitely come a long way in coding HTML to our DTD - and I am even starting to get a little creative with CSS... ouch.

I will be on vacation from tomorrow thru next week - bringing my laptop so you can still stay in touch, update me with status, ask questions: please feel free!!

Brian

--- a/www/ui/milestone1x_screens/2-0-0-1.html
+++ b/www/ui/milestone1x_screens/2-0-0-1.html
@@ -7,13 +7,6 @@
 	<link rel="stylesheet" type="text/css" href="../csi/style/main.css" media="screen" />
 	<link rel="stylesheet" type="text/css" href="../csi/style/print.css" media="print" />
 	<link rel="alternate stylesheet" title="compact" type="text/css" href="../csi/style/compact.css" />
-	<style type="text/css" title="notetoself">
-/* <![CDATA[ */
-#navcolumn div div {margin-top: .5em}
-#navcolumn div div div {margin-top: .2em}
-#navcolumn div div {margin-top: .5em}
-/* ]]> */
-</style>
 </head>
 
 <body>
@@ -30,9 +23,23 @@
 				Logged in as: <strong class="username">User XX</strong>
 			</div>
 			<div>
-				<a href="#">Edit Profile</a> | <a href="#">Logout</a>
+				<strong><small><a href="#">Edit Profile</a> | <a href="#">Logout</a></small></strong>
 			</div>
 		</div>
+		</td>
+		</tr>
+		</table>
+	</div>
+	<!-- SourceCast -->
+	
+	<!-- SourceCast -->
+	<div id="modulenav">
+		<table border="0" cellspacing="0" cellpadding="8" width="100%">
+		<tr>
+		
+		<td>
+			<strong><small><a href="#">select module</a>&nbsp;&nbsp;|&nbsp;&nbsp;current module: <a href="#">Module X</a></small></strong>
+			
 		</td>
 		</tr>
 		</table>
@@ -46,33 +53,31 @@
 <!-- Structural Elements -->
 
 
+	
+	<!-- Structural Elements -->
+<table border="0" cellspacing="0" cellpadding="8" width="98%" id="main">
+ <tr valign="top">
+<td id="leftcol" width="20%">
+<!-- Structural Elements -->
 
 
+<div id="navcolumn">
 
-	<div id="navcolumn">
+<div><strong><small>Artifact types</small></strong>
 
-<div><strong><a href="#">Select module</a></strong></div> 
-
- <div id="tools"><strong>The "x" module</strong>
-      <div><small><a href="#">Communication tools</a></small></div>
-<div><small><strong>Artifact types</strong></small>
-
-
-			<div><small><a href="#">Defect</a></small></div>
+			<div><strong><small>Index</small></strong></div>
+			<div><strong><small><a href="#">Defect</a></small></strong></div>
 			<div><small><a href="#">Enhancement</a></small></div>
 			<div><small><a href="#">Feature</a></small></div>
 			<div><small><a href="#">Patch</a></small></div>
 			<div><small><a href="#">Task</a></small></div>
 
 </div>
-     <div><small><a href="#">Documents</a></small></div>
-      <div><small><a href="#">News</a></small></div>  
    </div>
 
-   <div><a href="#"><strong>Admin functions</strong></a></div>
+   <div><a href="#"><strong><small>Admin functions</small></strong></a></div>
 
 
-</div>
 
 		<div id="helptext">
 		<table border="0" cellspacing="0" cellpadding="3" width="100%">
