--- a/www/ui/milestone1x_screens/2-0-0.html
+++ b/www/ui/milestone1x_screens/2-0-0.html
@@ -45,17 +45,41 @@
 <td id="leftcol" width="20%">
 <!-- Structural Elements -->
 
-
-
-	<div id="navcolumn">
-
-<div><strong>Select module</strong></div> 
-
-
-   <div><a href="#"><strong>Admin functions</strong></a></div>
-
-
-</div>
+    <!-- SourceCast -->
+    <div id="navcolumn">
+        <table border="0" cellspacing="0" cellpadding="0" width="100%">
+            <tr>
+            <th>
+            <a href="#">My start page</a>
+            </th>
+            </tr>
+            <tr>
+            <td>&nbsp;</td>
+            </tr>
+            <tr>
+            <th>
+            <a href="#">Projects &amp; categories</a>
+            </th>
+            </tr>
+            <tr>
+            <td>&nbsp;</td>
+            </tr>
+            <tr>
+            <th>
+            <a href="#">Project tools</a>
+            </th>
+            </tr>
+            <tr>
+            <td>&nbsp;</td>
+            </tr>
+            <tr>
+            <th>
+            <a href="#">Admin functions</a>
+            </th>
+            </tr>
+        </table>
+    </div>
+    <!-- SourceCast -->
 
 		<div id="helptext">
 		<table border="0" cellspacing="0" cellpadding="3" width="100%">
