--- a/www/ui/milestone1x_screens/2-1-0.html
+++ b/www/ui/milestone1x_screens/2-1-0.html
@@ -30,6 +30,19 @@
 		</tr>
 		</table>
 	</div>
+	
+	<!-- SourceCast -->
+	<div id="modulenav">
+		<table border="0" cellspacing="0" cellpadding="8" width="100%">
+		<tr>
+		
+		<td>
+			<strong><small><a href="#">select module</a>&nbsp;&nbsp;|&nbsp;&nbsp;current module: <a href="#">Module X</a></small></strong>
+			
+		</td>
+		</tr>
+		</table>
+	</div>
 	<!-- SourceCast -->
 	
 	<!-- Structural Elements -->
@@ -38,24 +51,31 @@
 <td id="leftcol" width="20%">
 <!-- Structural Elements -->
 	
-	<!-- SourceCast -->
+    <!-- SourceCast -->
+
+
 	<div id="navcolumn">
-		<div><strong><a href="#">My start page</a></strong></div>
-		<div><strong><a href="#">Projects &amp; categories</a></strong></div>
-		<div>Project tools</div>
-			<div>&nbsp;&raquo;&nbsp;<a href="#">Documents</a></div>
-			<div>&nbsp;&raquo;&nbsp;Issue tracking</div>
-			<div>&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;- Enter issue</div>
-			<div>&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;- <a href="#" title="queries, saved and custom">Queries</a></div>
-			<div>&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;- <a href="#" title="reports operations">Reports</a></div>
-			<div>&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;- <a href="#" title="vote management panel">Vote mgmt.</a></div>
-			<div>&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;- <a href="#" title="adjust your workflow options">Workflow optns.</a></div>
-			<div>&nbsp;&raquo;&nbsp;<a href="#">Mailing lists</a></div> 
-			<div>&nbsp;&raquo;&nbsp;<a href="#">Members</a></div>  
-			<div>&nbsp;&raquo;&nbsp;<a href="#">News</a></div>
-			<div>&nbsp;&raquo;&nbsp;<a href="#">Source code</a></div>
-		<div><strong><a href="#">Admin functions</a></strong></div>
-	</div>
+
+<div><strong><small>Artifact types</small></strong>
+
+			<div><strong><small><a href="#">Index</a></small></strong></div>
+			<div><strong><small><a href="#">Defect</a></small></strong>
+			<div><strong><small>Enter new</small></strong></div>
+			<div><small><a href="#">Template list</a></small></div>
+			<div><small><a href="#">New report</a></small></div>
+			<div><small><a href="#">Saved reports</a></small></div>
+			</div>
+			
+			<div><small><a href="#">Enhancement</a></small></div>
+			<div><small><a href="#">Feature</a></small></div>
+			<div><small><a href="#">Patch</a></small></div>
+			<div><small><a href="#">Task</a></small></div>
+
+</div>
+   </div>
+
+   <div><a href="#"><strong><small>Admin functions</small></strong></a></div>
+
 	<!-- SourceCast -->
 	
 	<!-- SourceCast -->
@@ -266,7 +286,7 @@
 			</tr>
 			</table>
 		</div>
-		<p class="functnbar"><input type="submit" value="check for dupes" />&#160;<input type="reset" value="reset form" /></p>
+		<p class="functnbar2"><input type="submit" value="check for dupes" />&#160;<input type="reset" value="reset form" /></p>
 	</div>
 	<!-- Scarab - App -->
 
