--- a/www/ui/milestone1x_screens/2-1-4.html
+++ b/www/ui/milestone1x_screens/2-1-4.html
@@ -39,38 +39,51 @@
     </div>
     <!-- SourceCast -->
     
-    <!-- Structural Elements -->
-<table border="0" cellspacing="0" cellpadding="8" width="98%" id="main">
+	<!-- SourceCast -->
+	<div id="modulenav">
+		<table border="0" cellspacing="0" cellpadding="8" width="100%">
+		<tr>
+		
+		<td>
+			<strong><small><a href="#">select module</a>&nbsp;&nbsp;|&nbsp;&nbsp;current module: <a href="#">Module X</a></small></strong>
+			
+		</td>
+		</tr>
+		</table>
+	</div>
+	<!-- SourceCast -->
+	
+	<!-- Structural Elements -->
+<table border="0" cellspacing="0" cellpadding="8" width="97%" id="main">
  <tr valign="top">
 <td id="leftcol" width="20%">
 <!-- Structural Elements -->
-    
+	
     <!-- SourceCast -->
+
+
 	<div id="navcolumn">
 
-<div><strong><a href="#">Select module</a></strong></div> 
+<div><strong><small>Artifact types</small></strong>
 
- <div id="tools"><strong>The "x" module</strong>
-      <div><small><a href="#">Communication tools</a></small></div>
-<div><small><a href="#">Artifact types</a></small>
-
-			<div><small><a href="#">Defect</a></small></div>
+			<div><strong><small><a href="#">Index</a></small></strong></div>
+			<div><strong><small><a href="#">Defect</a></small></strong>
+			<div><a href="#"><small>Enter new</a></small></div>
+			<div><small><a href="#">Template list</a></small></div>
+			<div><small><a href="#">New report</a></small></div>
+			<div><small><a href="#">Saved reports</a></small></div>
+			</div>
+			
 			<div><small><a href="#">Enhancement</a></small></div>
 			<div><small><a href="#">Feature</a></small></div>
 			<div><small><a href="#">Patch</a></small></div>
 			<div><small><a href="#">Task</a></small></div>
 
-
 </div>
-     <div><small><a href="#">Documents</a></small></div>
-      <div><small><a href="#">News</a></small></div>  
-   </div>
 
-   <div><a href="#"><strong>Admin functions</strong></a></div>
+   <div><strong><small>Admin functions</small></strong>
 
-<div><div><small><a href="#">Manage modules</a></small></div></div>
-
-<div id="tools"><div><small>Admin: The "x" module</small>
+	<!-- SourceCast -->
 <div><small><strong>Manage artifact types</strong></div>
 <div><small><a href="#">Customize "enter artifact"</a></small></div>
 <div><small><a href="#">Global attributes</a></small></div>
