--- a/www/ui/milestone1x_screens/2-0-0-2-x.html
+++ b/www/ui/milestone1x_screens/2-0-0-2-x.html
@@ -7,13 +7,6 @@
 	<link rel="stylesheet" type="text/css" href="../csi/style/main.css" media="screen" />
 	<link rel="stylesheet" type="text/css" href="../csi/style/print.css" media="print" />
 	<link rel="alternate stylesheet" title="compact" type="text/css" href="../csi/style/compact.css" />
-	<style type="text/css" title="notetoself">
-/* <![CDATA[ */
-#navcolumn div div {margin-top: .5em}
-#navcolumn div div div {margin-top: .2em}
-#navcolumn div div {margin-top: .5em}
-/* ]]> */
-</style>
 </head>
 
 <body>
@@ -38,6 +31,18 @@
 		</table>
 	</div>
 	<!-- SourceCast -->
+	<div id="modulenav">
+		<table border="0" cellspacing="0" cellpadding="8" width="100%">
+		<tr>
+		
+		<td>
+			<strong><small><a href="#">select module</a>&nbsp;&nbsp;|&nbsp;&nbsp;current module: <a href="#">Module X</a></small></strong>
+			
+		</td>
+		</tr>
+		</table>
+	</div>
+	<!-- SourceCast -->
 	
 	<!-- Structural Elements -->
 <table border="0" cellspacing="0" cellpadding="8" width="98%" id="main">
@@ -46,31 +51,37 @@
 <!-- Structural Elements -->
 
 
-
-	<div id="navcolumn">
-
-<div><strong><a href="#">Select module</a></strong></div> 
-
- <div id="tools"><strong>The "x" module</strong>
-      <div><small><a href="#">Communication tools</a></small></div>
-<div><small><a href="#">Artifact types</a></small>
+	
+	<!-- Structural Elements -->
+<table border="0" cellspacing="0" cellpadding="8" width="98%" id="main">
+ <tr valign="top">
+<td id="leftcol" width="20%">
+<!-- Structural Elements -->
 
 
-			<div><small><strong>Defect</strong></small></div>
+<div id="navcolumn">
+
+<div><strong><small>Artifact types</small></strong>
+
+			<div><strong><small><a href="#">Index</a></small></strong></div>
+			<div><strong><small>Defect</small></strong>
+			<div><small><a href="#">Enter new</a></small></div>
+			<div><small><a href="#">Template list</a></small></div>
+			<div><small><a href="#">New report</a></small></div>
+			<div><small><a href="#">Saved reports</a></small></div>
+			</div>
+			
 			<div><small><a href="#">Enhancement</a></small></div>
 			<div><small><a href="#">Feature</a></small></div>
 			<div><small><a href="#">Patch</a></small></div>
 			<div><small><a href="#">Task</a></small></div>
 
 </div>
-     <div><small><a href="#">Documents</a></small></div>
-      <div><small><a href="#">News</a></small></div>  
    </div>
 
-   <div><a href="#"><strong>Admin functions</strong></a></div>
+   <div><a href="#"><strong><small>Admin functions</small></strong></a></div>
 
-
-</div>
+	<!-- SourceCast -->
 
 		<div id="helptext">
 		<table border="0" cellspacing="0" cellpadding="3" width="100%">
