--- a/www/ui/milestone1x_screens/2-1-1.html
+++ b/www/ui/milestone1x_screens/2-1-1.html
@@ -32,58 +32,51 @@
 	</div>
 	<!-- SourceCast -->
 	
+	<!-- SourceCast -->
+	<div id="modulenav">
+		<table border="0" cellspacing="0" cellpadding="8" width="100%">
+		<tr>
+		
+		<td>
+			<strong><small><a href="#">select module</a>&nbsp;&nbsp;|&nbsp;&nbsp;current module: <a href="#">Module X</a></small></strong>
+			
+		</td>
+		</tr>
+		</table>
+	</div>
+	<!-- SourceCast -->
+	
 	<!-- Structural Elements -->
-<table border="0" cellspacing="0" cellpadding="8" width="98%" id="main">
+<table border="0" cellspacing="0" cellpadding="8" width="97%" id="main">
  <tr valign="top">
 <td id="leftcol" width="20%">
 <!-- Structural Elements -->
 	
-	<!-- SourceCast -->
+    <!-- SourceCast -->
+
+
 	<div id="navcolumn">
-		<table border="0" cellspacing="0" cellpadding="0" width="100%">
-			<tr>
-			<th>
-			<a href="#">My start page</a>
-			</th>
-			</tr>
-			<tr>
-			<th>
-			<a href="#">Projects &amp; categories</a>
-			</th>
-			</tr>
-			<tr>
-			<td>&nbsp;</td>
-			</tr>
-			<tr>
-			<th>
-			Project tools
-			</th>
-			</tr>
-			<tr>
-			<td>
-			<div>&nbsp;&nbsp;+ <a href="#">Documents</a></div>
-			<div>&nbsp;&nbsp;- <strong>Issue tracking</strong></div>
-			<div>&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;- Enter issue</div>
-			<div>&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;- <a href="#" title="queries, saved and custom">Queries</a></div>
-			<div>&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;- <a href="#" title="reports operations">Reports</a></div>
-			<div>&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;- <a href="#" title="vote management panel">Vote mgmt.</a></div>
-			<div>&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;- <a href="#" title="adjust your workflow options">Workflow optns.</a></div>
-			<div>&nbsp;&nbsp;+ <a href="#">Mailing lists</a></div> 
-			<div>&nbsp;&nbsp;+ <a href="#">Members</a></div>  
-			<div>&nbsp;&nbsp;+ <a href="#">News</a></div>
-			<div>&nbsp;&nbsp;+ <a href="#">Source code</a></div>
-			</td>
-			</tr>
-			<tr>
-			<td>&nbsp;</td>
-			</tr>
-			<tr>
-			<th>
-			&nbsp;<a href="#">Admin functions</a>
-			</th>
-			</tr>
-		</table>
-	</div>
+
+<div><strong><small>Artifact types</small></strong>
+
+			<div><strong><small><a href="#">Index</a></small></strong></div>
+			<div><strong><small><a href="#">Defect</a></small></strong>
+			<div><strong><small>Enter new</small></strong></div>
+			<div><small><a href="#">Template list</a></small></div>
+			<div><small><a href="#">New report</a></small></div>
+			<div><small><a href="#">Saved reports</a></small></div>
+			</div>
+			
+			<div><small><a href="#">Enhancement</a></small></div>
+			<div><small><a href="#">Feature</a></small></div>
+			<div><small><a href="#">Patch</a></small></div>
+			<div><small><a href="#">Task</a></small></div>
+
+</div>
+   </div>
+
+   <div><a href="#"><strong><small>Admin functions</small></strong></a></div>
+
 	<!-- SourceCast -->
 	
 	<!-- SourceCast -->
@@ -260,7 +253,7 @@
 		Text entered into the "note" text area will be appended to "comments" of selected issue(s)
 		when either "add vote to selected" or "submit note only" are executed.
 
-		<p class="functnbar"><input type="submit" value="bypass duplicates" />&#160;<input type="submit" value="cancel" /></p>
+		<p class="functnbar2"><input type="submit" value="bypass duplicates" />&#160;<input type="submit" value="cancel" /></p>
 	</div>
 	<!-- Scarab - App -->
 
