--- a/www/ui/milestone1x_screens/2-6-1.html
+++ b/www/ui/milestone1x_screens/2-6-1.html
@@ -31,60 +31,52 @@
 		</table>
 	</div>
 	<!-- SourceCast -->
+
+	<!-- SourceCast -->
+	<div id="modulenav">
+		<table border="0" cellspacing="0" cellpadding="8" width="100%">
+		<tr>
+		
+		<td>
+			
+			<strong><small><a href="#">select module</a>&nbsp;&nbsp;|&nbsp;&nbsp;current module: <a href="#">Module X</a></small></strong>
+			
+		</td>
+		</tr>
+		</table>
+	</div>
+	<!-- SourceCast -->
 	
 	<!-- Structural Elements -->
-<table border="0" cellspacing="0" cellpadding="8" width="98%" id="main">
+<table border="0" cellspacing="0" cellpadding="8" width="97%" id="main">
  <tr valign="top">
 <td id="leftcol" width="20%">
 <!-- Structural Elements -->
 	
-	<!-- SourceCast -->
+    <!-- SourceCast -->
+
+
 	<div id="navcolumn">
-		<table border="0" cellspacing="0" cellpadding="0" width="100%">
-			<tr>
-			<th>
-			<a href="#">My start page</a>
-			</th>
-			</tr>
-			<tr>
-			<th>
-			<a href="#">Projects &amp; categories</a>
-			</th>
-			</tr>
-			<tr>
-			<td>&nbsp;</td>
-			</tr>
-			<tr>
-			<th>
-			Project tools
-			</th>
-			</tr>
-			<tr>
-			<td>
-			<div>&nbsp;&nbsp;+ <a href="#">Documents</a></div>
-			<div>&nbsp;&nbsp;- <strong>Issue tracking</strong></div>
-			<div>&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;- <a href="#" title="enter issue, verbose and advanced">Enter issue</a></div>
-			<div>&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;- Queries</div>
-			<div>&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;- <a href="#" title="reports operations">Reports</a></div>
-			<div>&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;- <a href="#" title="vote management panel">Vote mgmt.</a></div>
-			<div>&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;- <a href="#" title="adjust your workflow options">Workflow optns.</a></div>
-			<div>&nbsp;&nbsp;+ <a href="#">Mailing lists</a></div> 
-			<div>&nbsp;&nbsp;+ <a href="#">Members</a></div>  
-			<div>&nbsp;&nbsp;+ <a href="#">News</a></div>
-			<div>&nbsp;&nbsp;+ <a href="#">Source code</a></div>
-			</td>
-			</tr>
-			<tr>
-			<td>&nbsp;</td>
-			</tr>
-			<tr>
-			<th>
-			&nbsp;<a href="#">Admin functions</a>
-			</th>
-			</tr>
-		</table>
-	</div>
-	<!-- SourceCast -->
+
+<div><strong><small>Artifact types</small></strong>
+
+			<div><strong><small><a href="#">Index</a></small></strong></div>
+			<div><strong><small><a href="#">Defect</a></small></strong>
+			<div><a href="#"><small>Enter new</a></small></div>
+			<div><small><a href="#">Template list</a></small></div>
+			<div><small><a href="#">New report</a></small></div>
+			<div><small><a href="#">Saved reports</a></small></div>
+			</div>
+			
+			<div><small><a href="#">Enhancement</a></small></div>
+			<div><small><a href="#">Feature</a></small></div>
+			<div><small><a href="#">Patch</a></small></div>
+			<div><small><a href="#">Task</a></small></div>
+
+</div>
+
+   <div><strong><small><a href="#">Admin functions</a></small></strong></div>
+</div>
 	
 	<!-- SourceCast -->
 	<div id="helptext">
@@ -145,7 +137,7 @@
 	
 		<p>&#171; previous | 1 of 3 | <a href="#">next</a> <a href="#">&#187;</a></p>
 	
-		<p class="functnbar"><input type="submit" value="save" />&#160;<input type="submit" value="cancel" /></p>
+		<p class="functnbar"><input type="submit" value="submit changes" />&#160;<input type="submit" value="cancel" /></p>
 
 		<h3>Issue id #123</h3>
 		
@@ -387,7 +379,7 @@
 	
 		<p><a href="#">view complete history</a></p>
 	
-		<p class="functnbar"><input type="submit" value="save" />&#160;<input type="submit" value="cancel" /></p>
+		<p class="functnbar2"><input type="submit" value="submit changes" />&#160;<input type="submit" value="cancel" /></p>
 	
 		<p>&#171; previous | 1 of 3 | <a href="#">next</a> <a href="#">&#187;</a></p>
 	</div>
