--- a/www/ui/milestone1x_screens/3-0-1.html
+++ b/www/ui/milestone1x_screens/3-0-1.html
@@ -3,7 +3,7 @@
 <html>
 
 <head>
-	<title>Global attributes (3.0.1)</title>
+	<title>Global attributes: add attributes to artifact type (3.0.1)</title>
 	<link rel="stylesheet" type="text/css" href="../csi/style/main.css" media="screen" />
 	<link rel="stylesheet" type="text/css" href="../csi/style/print.css" media="print" />
 	<link rel="alternate stylesheet" title="compact" type="text/css" href="../csi/style/compact.css" />
@@ -31,59 +31,57 @@
 		</table>
 	</div>
 	<!-- SourceCast -->
+
+	<!-- SourceCast -->
+	<div id="modulenav">
+		<table border="0" cellspacing="0" cellpadding="8" width="100%">
+		<tr>
+		
+		<td>
+			<strong><small><a href="#">select module</a>&nbsp;&nbsp;|&nbsp;&nbsp;current module: <a href="#">Module X</a></small></strong>
+			
+		</td>
+		</tr>
+		</table>
+	</div>
+	<!-- SourceCast -->
 	
 	<!-- Structural Elements -->
 <table border="0" cellspacing="0" cellpadding="8" width="98%" id="main">
  <tr valign="top">
 <td id="leftcol" width="20%">
 <!-- Structural Elements -->
+
+
 	
-	<!-- SourceCast -->
-	<div id="navcolumn">
-		<table border="0" cellspacing="0" cellpadding="0" width="100%">
-			<tr>
-			<th>
-			<a href="#">My start page</a>
-			</th>
-			</tr>
-			<tr>
-			<th>
-			<a href="#">Projects &amp; categories</a>
-			</th>
-			</tr>
-			<tr>
-			<td>&nbsp;</td>
-			</tr>
-			<tr>
-			<th>
-			Project tools
-			</th>
-			</tr>
-			<tr>
-			<td>
-			<div>&nbsp;&nbsp;+ <a href="#">Documents</a></div>
-			<div>&nbsp;&nbsp;- <strong>Issue tracking</strong></div>
-			<div>&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;- <a href="#" title="enter issue, verbose and advanced">Enter issue</a></div>
-			<div>&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;- <a href="#" title="queries, saved and custom">Queries</a></div>
-			<div>&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;- <a href="#" title="reports operations">Reports</a></div>
-			<div>&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;- <a href="#" title="vote management panel">Vote mgmt.</a></div>
-			<div>&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;- Workflow optns.</div>
-			<div>&nbsp;&nbsp;+ <a href="#">Mailing lists</a></div> 
-			<div>&nbsp;&nbsp;+ <a href="#">Members</a></div>  
-			<div>&nbsp;&nbsp;+ <a href="#">News</a></div>
-			<div>&nbsp;&nbsp;+ <a href="#">Source code</a></div>
-			</td>
-			</tr>
-			<tr>
-			<td>&nbsp;</td>
-			</tr>
-			<tr>
-			<th>
-			&nbsp;<a href="#">Admin functions</a>
-			</th>
-			</tr>
-		</table>
-	</div>
+	<!-- Structural Elements -->
+<table border="0" cellspacing="0" cellpadding="8" width="98%" id="main">
+ <tr valign="top">
+<td id="leftcol" width="20%">
+<!-- Structural Elements -->
+
+
+<div id="navcolumn">
+
+<div><strong><small>Artifact types</small></strong>
+
+			<div><strong><small>Index</small></strong></div>
+			<div><strong><small><a href="#">Defect</a></small></strong></div>
+			<div><small><a href="#">Enhancement</a></small></div>
+			<div><small><a href="#">Feature</a></small></div>
+			<div><small><a href="#">Patch</a></small></div>
+			<div><small><a href="#">Task</a></small></div>
+
+</div>
+
+
+   <div><a href="#"><strong><small>Admin functions</small></strong></a>	
+<div><small><a href="#">Manage artifact types</a></small></div>
+<div><small><strong><a href="#">Customize "enter artifact"</a></strong></small></div>
+<div><small><a href="#">Global attributes</a></small></div>
+</div>
+
+
 	<!-- SourceCast -->
 	
 	<!-- SourceCast -->
