--- a/www/ui/milestone1x_screens/3-0-2-0.html
+++ b/www/ui/milestone1x_screens/3-0-2-0.html
@@ -31,60 +31,59 @@
 		</table>
 	</div>
 	<!-- SourceCast -->
+
+	<!-- SourceCast -->
+	<div id="modulenav">
+		<table border="0" cellspacing="0" cellpadding="8" width="100%">
+		<tr>
+		
+		<td>
+			<strong><small><a href="#">select module</a>&nbsp;&nbsp;|&nbsp;&nbsp;current module: <a href="#">Module X</a></small></strong>
+			
+		</td>
+		</tr>
+		</table>
+	</div>
+	<!-- SourceCast -->
 	
 	<!-- Structural Elements -->
 <table border="0" cellspacing="0" cellpadding="8" width="98%" id="main">
  <tr valign="top">
 <td id="leftcol" width="20%">
 <!-- Structural Elements -->
+
+
 	
+	<!-- Structural Elements -->
+<table border="0" cellspacing="0" cellpadding="8" width="98%" id="main">
+ <tr valign="top">
+<td id="leftcol" width="20%">
+<!-- Structural Elements -->
+
+
+<div id="navcolumn">
+
+<div><strong><small>Artifact types</small></strong>
+
+			<div><strong><small>Index</small></strong></div>
+			<div><strong><small><a href="#">Defect</a></small></strong></div>
+			<div><small><a href="#">Enhancement</a></small></div>
+			<div><small><a href="#">Feature</a></small></div>
+			<div><small><a href="#">Patch</a></small></div>
+			<div><small><a href="#">Task</a></small></div>
+
+</div>
+
+
+   <div><a href="#"><strong><small>Admin functions</small></strong></a>	
+<div><small><a href="#">Manage artifact types</a></small></div>
+<div><small><strong><a href="#">Customize "enter artifact"</a></strong></small></div>
+<div><small><a href="#">Global attributes</a></small></div>
+</div>
+
+
 	<!-- SourceCast -->
-	<div id="navcolumn">
-		<table border="0" cellspacing="0" cellpadding="0" width="100%">
-			<tr>
-			<th>
-			<a href="#">My start page</a>
-			</th>
-			</tr>
-			<tr>
-			<th>
-			<a href="#">Projects &amp; categories</a>
-			</th>
-			</tr>
-			<tr>
-			<td>&nbsp;</td>
-			</tr>
-			<tr>
-			<th>
-			Project tools
-			</th>
-			</tr>
-			<tr>
-			<td>
-			<div>&nbsp;&nbsp;+ <a href="#">Documents</a></div>
-			<div>&nbsp;&nbsp;- <strong>Issue tracking</strong></div>
-			<div>&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;- <a href="#" title="enter issue, verbose and advanced">Enter issue</a></div>
-			<div>&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;- <a href="#" title="queries, saved and custom">Queries</a></div>
-			<div>&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;- <a href="#" title="reports operations">Reports</a></div>
-			<div>&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;- <a href="#" title="vote management panel">Vote mgmt.</a></div>
-			<div>&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;- Workflow optns.</div>
-			<div>&nbsp;&nbsp;+ <a href="#">Mailing lists</a></div> 
-			<div>&nbsp;&nbsp;+ <a href="#">Members</a></div>  
-			<div>&nbsp;&nbsp;+ <a href="#">News</a></div>
-			<div>&nbsp;&nbsp;+ <a href="#">Source code</a></div>
-			</td>
-			</tr>
-			<tr>
-			<td>&nbsp;</td>
-			</tr>
-			<tr>
-			<th>
-			&nbsp;<a href="#">Admin functions</a>
-			</th>
-			</tr>
-		</table>
-	</div>
-	<!-- SourceCast -->
+
 	
 	<!-- SourceCast -->
 	<div id="helptext">
@@ -143,7 +142,7 @@
 	<div class="app" id="div3-0-2-0">
 		<h2>Add / edit attribute (3.0.2.0)</h2>
 
-		<p class="functnbar"><input type="submit" value="save" />&#160;<input type="submit" value="cancel" /></p>
+		<p class="functnbar"><input type="submit" value="submit changes" />&#160;<input type="submit" value="done" />&#160;<input type="submit" value="copy" />&#160;<input type="submit" value="cancel" /></p>
 
 		<p><a href="#">&laquo;</a>&nbsp;<a href="#">prev</a> | <a href="#">next</a>&nbsp;<a href="#">&raquo;</a></p>
 		
@@ -270,10 +269,7 @@
 		
 		<p><input type="submit" value="add option" />&#160;<input type="submit" value="add child option" />&#160;<input type="submit" value="delete selected options" /></p>
 		
-		<p><a href="#">copy this attribute</a></p>
-
-		<p class="functnbar"><input type="submit" value="save" />&#160;<input type="submit" value="cancel" /></p>
-	</div>
+		<p class="functnbar2"><input type="submit" value="submit changes" />&#160;<input type="submit" value="done" />&#160;<input type="submit" value="copy" />&#160;<input type="submit" value="cancel" /></p>	</div>
 	<!-- Scarab - App -->
 
 <!-- Structural Elements -->
