--- a/www/project_status.html
+++ b/www/project_status.html
@@ -1,4 +1,4 @@
-<!-- $Id: project_status.html,v 1.29 2001/10/16 08:09:00 jon Exp $ -->
+<!-- $Id: project_status.html,v 1.30 2001/10/19 23:09:31 jon Exp $ -->
 <!doctype html public "-//w3c//dtd html 4.0 transitional//en">
 <html>
 <head>
@@ -10,7 +10,8 @@
 
 <table border=0 cellpadding=2 width="98%" bgcolor="#FFFFFF" >
     <tr> 
-        <td width="100%" bgcolor="#CCCC99"><b><font face="Arial, Helvetica, sans-serif" color="#000033">
+        <td width="100%" bgcolor="#CCCC99"><b>
+        <font face="Arial, Helvetica, sans-serif" color="#000033">
         Project Status</font></b></td>
     </tr>
 </table>
@@ -20,13 +21,13 @@
 </p>
 
 <p align="center">
-Last Updated: $Date: 2001/10/16 08:09:00 $
+Last Updated: $Date: 2001/10/19 23:09:31 $
 </p>
 
 <h3><i>Tentative</i> Roadmap</h3>
 
 <p>
-Scarab 1.0dr1* Release Date: 10/17
+Scarab 1.0dr1* Release Date: 10/24
 </p>
 
 <p>
@@ -63,14 +64,15 @@ up to date reflection of the current project status.
 
 <ul>
 <li>
-    10-15-01 - We are going to be behind on the 1.0dr1 release a day or
-    so...we gave it out best shot to make it on Monday, but reality is
-    that adding the artifact type stuff has taken a bit longer to get
-    implemented than we estimated...not only has it meant some fairly
-    large changes to the database and code, but we also have to provide
-    about 5-6 screens worth of admin editors on some fairly complex
-    business logic. I just don't want to release with this stuff being
-    not completely implemented and the logic not fully tested.
+    10-19-01 - Still in heavy development mode. We are about a week
+    behind because we added artifact types. It is a fairly major change
+    to the system and has set us back a bit. The good news is that it is
+    coming along quite well and things are starting to stabalize. The
+    ability to create an number of artifact types / module and have each
+    artifact type have its own set of attributes is a very cool feature.
+    I figure that if we delay the 1.0dr1 release until next week, we
+    will be in much better shape than to release a product we know isn't
+    ready for release yet.
 </li>
 </ul>
 
