*** empty log message ***

--- a/buildnotes_jdt-core.html
+++ b/buildnotes_jdt-core.html
@@ -54,11 +54,15 @@ AST: Wrong source ranges on VariableDeclExpression
 "Source->Generate Delegate Methods..." fails
 	  	
 <h3>Problem Reports Closed</h3>
-<a href="http://bugs.eclipse.org/bugs/show_bug.cgi?id=37328">37328</a>
+<a href="http://bugs.eclipse.org/bugs/show_bug.cgi?id=37426">37426</a>
+NPE while compiling
+<br><a href="http://bugs.eclipse.org/bugs/show_bug.cgi?id=37328">37328</a>
 class incompatability compiling within/outside of eclipse
 <br><!-- a href="http://bugs.eclipse.org/bugs/show_bug.cgi?id=35899">35899</a>
 "hierarchy of type ... inconsistent" error message wrong
-<br --><a href="http://bugs.eclipse.org/bugs/show_bug.cgi?id=37247">37247</a>
+<br><a href="http://bugs.eclipse.org/bugs/show_bug.cgi?id=37122">37122</a>
+non-existent import flaged as "not used" instead of "not found"
+<br><a href="http://bugs.eclipse.org/bugs/show_bug.cgi?id=37247">37247</a>
 invalid byte code: java.lang.VerifyError
 <br><a href="http://bugs.eclipse.org/bugs/show_bug.cgi?id=37168">37168</a>
 Task tag produces two tasks when next to a closing brace
