--- a/buildnotes_jdt-core.html
+++ b/buildnotes_jdt-core.html
@@ -54,7 +54,9 @@ AST: Wrong source ranges on VariableDeclExpression
 "Source->Generate Delegate Methods..." fails
 	  	
 <h3>Problem Reports Closed</h3>
-<a href="http://bugs.eclipse.org/bugs/show_bug.cgi?id=37426">37426</a>
+<a href="http://bugs.eclipse.org/bugs/show_bug.cgi?id=37296">37296</a>
+Eclipse compiler error - ambiguous method call
+<br><a href="http://bugs.eclipse.org/bugs/show_bug.cgi?id=37426">37426</a>
 NPE while compiling
 <br><a href="http://bugs.eclipse.org/bugs/show_bug.cgi?id=37328">37328</a>
 class incompatability compiling within/outside of eclipse
