--- a/www/project_tools.html
+++ b/www/project_tools.html
@@ -1,4 +1,4 @@
-<!-- $Id: project_tools.html,v 1.8 2003/02/18 09:30:42 linus Exp $ -->
+<!-- $Id: project_tools.html,v 1.9 2003/05/12 11:28:40 linus Exp $ -->
 <div><small><a href="/documentation/">Documentation</a></small></div>
 <div><small><a href="/documentation/defaulthtml/quick-guide/">Quick guide</a></small></div>
 <div><small><a href="/documentation/defaulthtml/manual/">User Manual</a></small></div>
@@ -9,6 +9,6 @@
 <div><small><a href="/servlets/ProjectMailingListList">Mailing lists</a></small></div> 
 
 <div><small><a href="/servlets/ProjectMemberList">Membership</a></small></div>
-<div><small><a href="/servlets/ProjectSource">Source code</a></small></div>
+<div><small><a href="/documentation/projectsource/">Source code</a></small></div>
 <div><small><a href="/project_bugs.html">Bugs and Issues</a></small></div>
 <div><small><a href="/dev.html">Developer Zone</a></small></div>
