*** empty log message ***

--- a/buildnotes_jdt-core.html
+++ b/buildnotes_jdt-core.html
@@ -41,6 +41,8 @@ Eclipse SDK 3.0 Build - ?th May 2003
 <h2>
 What's new in this drop</h2>
 <ul>
+<li>Lowered default severity of field/local variable hiding optional diagnosis to <code>"ignore"</code>.
+</li>
 <!--
 <li> Plugin version ID got incremented to 3.0.0. 
 </li>
