*** empty log message ***

--- a/buildnotes_jdt-core.html
+++ b/buildnotes_jdt-core.html
@@ -43,6 +43,8 @@ What's new in this drop</h2>
 <ul>
 <li>Lowered default severity of field/local variable hiding optional diagnosis to <code>"ignore"</code>.
 </li>
+<li>Lowered default severity of accidental boolean assignment optional diagnosis to <code>"ignore"</code>.
+</li>
 <!--
 <li> Plugin version ID got incremented to 3.0.0. 
 </li>
