--- a/buildnotes_jdt-core.html
+++ b/buildnotes_jdt-core.html
@@ -52,7 +52,9 @@ What's new in this drop</h2>
 </ul>
 
 <h3>Problem Reports Fixed</h3>
-<a href="http://bugs.eclipse.org/bugs/show_bug.cgi?id=37381">37381</a>
+<a href="http://bugs.eclipse.org/bugs/show_bug.cgi?id=37387">37387</a>
+Compiler generates unnecessary byte codes
+<br><a href="http://bugs.eclipse.org/bugs/show_bug.cgi?id=37381">37381</a>
 AST: Wrong source ranges on VariableDeclExpression
 <br><a href="http://bugs.eclipse.org/bugs/show_bug.cgi?id=37200">37200</a>
 "Source->Generate Delegate Methods..." fails
