*** empty log message ***

--- a/buildnotes_jdt-core.html
+++ b/buildnotes_jdt-core.html
@@ -62,7 +62,9 @@ AST: Wrong source ranges on VariableDeclExpression
 "Source->Generate Delegate Methods..." fails
 	  	
 <h3>Problem Reports Closed</h3>
-<a href="http://bugs.eclipse.org/bugs/show_bug.cgi?id=37296">37296</a>
+<a href="http://bugs.eclipse.org/bugs/show_bug.cgi?id=37526">37526</a>
+compiler message: ... is out of range
+<br><a href="http://bugs.eclipse.org/bugs/show_bug.cgi?id=37296">37296</a>
 Eclipse compiler error - ambiguous method call
 <br><a href="http://bugs.eclipse.org/bugs/show_bug.cgi?id=37426">37426</a>
 NPE while compiling
