*** empty log message ***

--- a/buildnotes_jdt-core.html
+++ b/buildnotes_jdt-core.html
@@ -36,6 +36,24 @@
 <p><hr><h1>
 Eclipse Platform Build Notes&nbsp;<br>
 Java Development Tooling Core</h1>
+Eclipse SDK 3.0 Build - ?th May 2003
+<br>Project org.eclipse.jdt.core v_353
+<h2>
+What's new in this drop</h2>
+<ul>
+<!--
+<li> Plugin version ID got incremented to 3.0.0. 
+</li>
+-->
+</ul>
+
+<h3>Problem Reports Fixed</h3>
+
+<h3>Problem Reports Closed</h3>
+
+<p><hr><h1>
+Eclipse Platform Build Notes&nbsp;<br>
+Java Development Tooling Core</h1>
 Eclipse SDK 3.0 Build - 13th May 2003
 <br>Project org.eclipse.jdt.core v_352
 <h2>
@@ -45,10 +63,6 @@ What's new in this drop</h2>
 </li>
 <li>Lowered default severity of accidental boolean assignment optional diagnosis to <code>"ignore"</code>.
 </li>
-<!--
-<li> Plugin version ID got incremented to 3.0.0. 
-</li>
--->
 </ul>
 
 <h3>Problem Reports Fixed</h3>
