--- a/www/oracle.html
+++ b/www/oracle.html
@@ -6,7 +6,7 @@
 <body bgcolor="#ffffff">
 
 <h2>Scarab - Oracle</h2>
-<h4>$Id: oracle.html,v 1.11 2002/11/12 15:20:52 thierrylach Exp $</h4>
+<h4>$Id: oracle.html,v 1.12 2003/05/13 13:14:15 thierrylach Exp $</h4>
 
 <p>
 Scarab has been developed with database independence in mind, however
@@ -27,7 +27,9 @@ Oracle, try the following:
 
 <ul>
     <li>Copy the Oracle jdbc driver .jar file into the scarab/lib/
-        directory *before* building Scarab.</li>
+        directory *before* building Scarab.
+        If the jar is named to match the regular expression *oracle*.jar,
+        the existing build process will copy it as necessary.</li>
     <li>Create a scarab/build/build.properties file.</li>
     <li>In it, fill out the following properties with the right information
 pertaining to Oracle...ie: for database.*.url, create an Oracle JDBC URL.
