--- a/buildnotes_jdt-core.html
+++ b/buildnotes_jdt-core.html
@@ -60,7 +60,9 @@ JACKS: Class literal should not cause class initialization
 Compiler does not take care of exclusion filter
 
 <h3>Problem Reports Closed</h3>
-
+<a href="http://bugs.eclipse.org/bugs/show_bug.cgi?id=37725">37725</a>
+Support JDK 1.5 ("Tiger")
+	  	
 <p><hr><h1>
 Eclipse Platform Build Notes&nbsp;<br>
 Java Development Tooling Core</h1>
