*** empty log message ***

--- a/buildnotes_jdt-core.html
+++ b/buildnotes_jdt-core.html
@@ -48,7 +48,9 @@ What's new in this drop</h2>
 </ul>
 
 <h3>Problem Reports Fixed</h3>
-<a href="http://bugs.eclipse.org/bugs/show_bug.cgi?id=37646">37646</a>
+<a href="http://bugs.eclipse.org/bugs/show_bug.cgi?id=37621">37621</a>
+java compiler creates class with internal inconsistency
+<br><a href="http://bugs.eclipse.org/bugs/show_bug.cgi?id=37646">37646</a>
 Help for JDTCompilerAdapter is dated
 <br><a href="http://bugs.eclipse.org/bugs/show_bug.cgi?id=36894">36894</a>
 JobManager could wait when idle
@@ -60,7 +62,7 @@ JACKS: Class literal should not cause class initialization
 Compiler does not take care of exclusion filter
 
 <h3>Problem Reports Closed</h3>
-	  	
+
 <p><hr><h1>
 Eclipse Platform Build Notes&nbsp;<br>
 Java Development Tooling Core</h1>
