--- a/www/issues.html
+++ b/www/issues.html
@@ -29,7 +29,7 @@ a particular issue the problem is reported against.
 <p>
 After searching the issue tracker and you really do have an original problem to report, 
 then please report it using our 
-<a href="http://issues.whichever.com/">new issue tracker</a>. Register and
+<a href="http://scarab.collab.net:8080/">new issue tracker</a>. Register and
 create a new account. Make sure to request a DEVELOPER role. Please 
 include a detailed message that describes the problem (make it as easy
 as possible to understand), how to reproduce the problem and a stack
@@ -50,7 +50,7 @@ please contact <a href="mailto:jon@latchkey.com">Jon</a> and let him know.
 
 <hr noshade="noshade" size="1" />
 
-<h5>$Id: issues.html,v 1.7 2002/10/09 23:15:23 jon Exp $</h5>
+<h5>$Id: issues.html,v 1.8 2003/05/17 01:25:48 dlr Exp $</h5>
 
 </body>
 </html>
