dlr is the new contact point for issues with the tracker
(dlr: i have yet to be able to get to it...any ideas? maybe ops hasn't opened
it to the outside world yet?)

--- a/www/issues.html
+++ b/www/issues.html
@@ -45,12 +45,12 @@ issues as you want.
 
 <p>
 If the new issue tracker is unavailable or you have a problem with it,
-please contact <a href="mailto:jon@latchkey.com">Jon</a> and let him know.
+please contact <a href="mailto:dlr@collab.net">Daniel Rall</a> and let him know.
 </p>
 
 <hr noshade="noshade" size="1" />
 
-<h5>$Id: issues.html,v 1.8 2003/05/17 01:25:48 dlr Exp $</h5>
+<h5>$Id: issues.html,v 1.9 2003/05/17 19:49:20 jon Exp $</h5>
 
 </body>
 </html>
