Update UML replacing jpg files with much smaller gifs.

--- a/src/share/org/apache/struts/action/package.html
+++ b/src/share/org/apache/struts/action/package.html
@@ -8,7 +8,7 @@
     providing the "Controller" aspect of a MVC model.</p>
  <br>
  <br>
- <img src="doc-files/actionUML.jpg" alt="Action Package UML" >
+ <img src="doc-files/actionUML.gif" alt="Action Package UML" >
  <br>
  
 <h2>Package Specification</h2>
