Update UML replacing jpg files with much smaller gifs.

--- a/src/share/org/apache/struts/actions/package.html
+++ b/src/share/org/apache/struts/actions/package.html
@@ -8,7 +8,7 @@
  request and the corresponding business logic.</p>
  <br>
  <br>
- <img src="doc-files/actionsUML.jpg" alt="Action Package UML" >
+ <img src="doc-files/actionsUML.gif" alt="Action Package UML" >
  <br>
  
 <h2>Package Specification</h2>
