Update UML replacing jpg files with much smaller gifs.

--- a/src/share/org/apache/struts/config/package.html
+++ b/src/share/org/apache/struts/config/package.html
@@ -2,6 +2,6 @@
 <p>The "config" package contains configuration objects that correspond to
 elements that may be specified in the <code>struts-config.xml</code>
 module configuration file.</p>
-<img src="doc-files/configUML.jpg" alt="Config UML">
+<img src="doc-files/configUML.gif" alt="Config UML">
 <br>
 </body>
