Update UML replacing jpg files with much smaller gifs.

--- a/src/share/org/apache/struts/taglib/bean/package.html
+++ b/src/share/org/apache/struts/taglib/bean/package.html
@@ -54,7 +54,7 @@ which will be included in the     response being created by your JSP page.</li>
 <p>See the <a href="../../../../../../userGuide/struts-bean.html">Bean Tags Reference</a>
  for detailed information about the available tags in this tag library, and
 the valid attributes for each tag.<br>
-<img src="doc-files/beanUML.jpg" alt="Bean Tag UML" width="938" height="1200">
+<img src="doc-files/beanUML.gif" alt="Bean Tag UML">
 <br>
 </p>
    <a name="doc.Properties"></a>
