Update UML replacing jpg files with much smaller gifs.

--- a/src/share/org/apache/struts/taglib/html/package.html
+++ b/src/share/org/apache/struts/taglib/html/package.html
@@ -33,7 +33,7 @@ involve <a href="#doc.Form">HTML</a>
   and <a href="#doc.Other.i18n">internationalization</a>
  .<br>
 </p>
-<div align="Center"> <img src="doc-files/htmlUML.jpg" alt="Tags Containing information or performing actions">
+<div align="Center"> <img src="doc-files/htmlUML.gif" alt="Tags that wrap the html tags">
  <br>
  </div>
 
