Update UML replacing jpg files with much smaller gifs.

--- a/src/share/org/apache/struts/taglib/logic/package.html
+++ b/src/share/org/apache/struts/taglib/logic/package.html
@@ -24,7 +24,7 @@ for repetitive generation of output text, and application flow management.
 presentation logic     without the use of scriptlets.</p>
 <p><br>
 </p>
-<div align="Center"><img src="doc-files/logicUML.jpg" alt="Logic Tag UML" width="952" height="1113">
+<div align="Center"><img src="doc-files/logicUML.gif" alt="Logic Tag UML" >
 <br>
    </div>
 <p></p>
