Update UML replacing jpg files with much smaller gifs.

--- a/src/share/org/apache/struts/taglib/nested/package.html
+++ b/src/share/org/apache/struts/taglib/nested/package.html
@@ -358,7 +358,7 @@ could use a "fake nested   property". A getter which simply returns the same
 bean instance ("this")  and   simply add an extra <code>nested:nest</code>
   level at the start of your   hierarchy. Works just fine).   </p>
 <hr><br />
-<img src="doc-files/nestedUML.jpg" alt="nested UML">
+<img src="doc-files/nestedUML.gif" alt="nested UML">
 <a name="doc.ImplementationDetails"></a>
 <h3>Implementation Details.</h3>
 <b>NestedPropertyHelper</b>
