*** empty log message ***

--- a/buildnotes_jdt-core.html
+++ b/buildnotes_jdt-core.html
@@ -36,8 +36,8 @@
 <p><hr><h1>
 Eclipse Platform Build Notes&nbsp;<br>
 Java Development Tooling Core</h1>
-Eclipse SDK 3.0 Build - 19th May 2003
-<br>Project org.eclipse.jdt.core v_353
+Eclipse SDK 3.0 Build - ?th May 2003
+<br>Project org.eclipse.jdt.core v_354
 <h2>
 What's new in this drop</h2>
 <ul>
@@ -45,6 +45,23 @@ What's new in this drop</h2>
 <li> Plugin version ID got incremented to 3.0.0. 
 </li>
 -->
+</ul>
+
+<h3>Problem Reports Fixed</h3>
+
+<h3>Problem Reports Closed</h3>
+<a href="http://bugs.eclipse.org/bugs/show_bug.cgi?id=37801">37801</a>
+JDT compiler bug ?
+
+
+<p><hr><h1>
+Eclipse Platform Build Notes&nbsp;<br>
+Java Development Tooling Core</h1>
+Eclipse SDK 3.0 Build - 19th May 2003
+<br>Project org.eclipse.jdt.core v_353
+<h2>
+What's new in this drop</h2>
+<ul>
 </ul>
 
 <h3>Problem Reports Fixed</h3>
