Batch remove the port 8080 portion of URLs to self-host (which is now behind a httpd proxy again).

--- a/www/issues.html
+++ b/www/issues.html
@@ -29,7 +29,7 @@ a particular issue the problem is reported against.
 <p>
 After searching the issue tracker and you really do have an original problem to report, 
 then please report it using our 
-<a href="http://scarab.collab.net:8080/">new issue tracker</a>. Register and
+<a href="http://scarab.collab.net/">new issue tracker</a>. Register and
 create a new account. Make sure to request a DEVELOPER role. Please 
 include a detailed message that describes the problem (make it as easy
 as possible to understand), how to reproduce the problem and a stack
@@ -50,7 +50,7 @@ please contact <a href="mailto:dlr@collab.net">Daniel Rall</a> and let him know.
 
 <hr noshade="noshade" size="1" />
 
-<h5>$Id: issues.html,v 1.9 2003/05/17 19:49:20 jon Exp $</h5>
+<h5>$Id: issues.html,v 1.10 2003/05/19 20:41:08 dlr Exp $</h5>
 
 </body>
 </html>
