s/the/a/ in first paragraph

--- a/www/versioning.html
+++ b/www/versioning.html
@@ -11,7 +11,7 @@
 
 <p>Originally, Scarab used version labeling like 1.0b1, 1.0b12, etc.,
 to mean a progression towards a 1.0 release.  We've since changed to
-the MAJOR.MINOR.PATCH numbering scheme (also followed by the <a
+a MAJOR.MINOR.PATCH numbering scheme (also followed by the <a
 href="http://subversion.tigris.org/">Subversion</a> project), which is
 <a href="http://apr.apache.org/versioning.html">detailed</a> by the
 Apache Portable Runtime (APR) project.  The APR document does not
