Another wording tweak to first paragraph.

--- a/www/versioning.html
+++ b/www/versioning.html
@@ -10,14 +10,14 @@
 <h2>Scarab version numbering</h2>
 
 <p>Originally, Scarab used version labeling like 1.0b1, 1.0b12, etc.,
-to mean a progression towards a 1.0 release.  We've since changed to
-a MAJOR.MINOR.PATCH numbering scheme (also followed by the <a
+to mean a progression towards a 1.0 release.  We've since changed to a
+MAJOR.MINOR.PATCH numbering scheme (also followed by the <a
 href="http://subversion.tigris.org/">Subversion</a> project), which is
 <a href="http://apr.apache.org/versioning.html">detailed</a> by the
 Apache Portable Runtime (APR) project.  The APR document does not
 cover changes to data storage, and is primarily concerned with API
-stability.  Both labeling schemes are leading towards the same goal,
-the release of Scarab 1.0 final.</p>
+stability.  Both labeling schemes are leading us towards the same
+goal, the release of Scarab 1.0 final.</p>
 
 <p>As the APR document leaves the 0.x.y versioning somewhat undefined
 (being past that stage), some clarifications are in order.
