* www/project_docs.html   Added a link to the new versioning strategy document under the   "Standard specifications" section.

--- a/www/project_docs.html
+++ b/www/project_docs.html
@@ -1,4 +1,4 @@
-<!-- $Id: project_docs.html,v 1.40 2003/03/10 16:40:52 jmcnally Exp $ -->
+<!-- $Id: project_docs.html,v 1.41 2003/05/19 21:16:24 dlr Exp $ -->
 <!DOCTYPE HTML PUBLIC "-//W3C//DTD HTML 3.2//EN">
 <html>
 
@@ -72,6 +72,7 @@
 
             <h3>Standard specifications</h3>
             <ul>
+                <li><a href="versioning.html">Scarab Versioning Strategy</a></li>
                 <li><a href="development.html">Scarab Development Notes</a></li>
                 <li><a href="http://jakarta.apache.org/turbine/common/code-standards.html">Coding Standards</a></li>
                 <li><a href="http://jakarta.apache.org/site/guidelines.html">Project Guidelines</a></li>
