The runbox is not yet available.

--- a/www/issues.html
+++ b/www/issues.html
@@ -38,9 +38,8 @@ trace if one is generated.
 
 <p>
 <strong>NOTE: Please do not use the new issue tracker to create
-test issues</strong>. You can use our <a
-href="http://scarab.whichever.com/">runbox</a> to create as many test
-issues as you want.
+test issues</strong>. You can use our runbox (available again soon)
+to create as many test issues as you want.
 </p>
 
 <p>
@@ -50,7 +49,7 @@ please contact <a href="mailto:dlr@collab.net">Daniel Rall</a> and let him know.
 
 <hr noshade="noshade" size="1" />
 
-<h5>$Id: issues.html,v 1.10 2003/05/19 20:41:08 dlr Exp $</h5>
+<h5>$Id: issues.html,v 1.11 2003/05/20 16:19:23 dlr Exp $</h5>
 
 </body>
 </html>
