--- a/www/project_status.html
+++ b/www/project_status.html
@@ -1,4 +1,4 @@
-<!-- $Id: project_status.html,v 1.56 2003/02/03 08:42:13 jon Exp $ -->
+<!-- $Id: project_status.html,v 1.57 2003/05/20 16:20:46 dlr Exp $ -->
 <!doctype html public "-//w3c//dtd html 4.0 transitional//en">
 <html>
 <head>
@@ -21,7 +21,7 @@
 </p>
 
 <p align="center">
-Last Updated: $Date: 2003/02/03 08:42:13 $
+Last Updated: $Date: 2003/05/20 16:20:46 $
 </p>
 
 <h3><i>Tentative</i> Roadmap</h3>
@@ -61,7 +61,7 @@ December.
 -->
 
 <p>
-There is a <a href="http://scarab.whichever.com/">Runbox</a> where you
+There is a Runbox (available again soon) where you
 can look at an actual instance of Scarab running on a machine. This is a
 nightly build and run of the latest version of Scarab from CVS. Any data
 in the database will get replaced the next rebuild. Note: If it shows an
