--- a/www/project_docs.html
+++ b/www/project_docs.html
@@ -1,4 +1,4 @@
-<!-- $Id: project_docs.html,v 1.41 2003/05/19 21:16:24 dlr Exp $ -->
+<!-- $Id: project_docs.html,v 1.42 2003/05/20 16:19:23 dlr Exp $ -->
 <!DOCTYPE HTML PUBLIC "-//W3C//DTD HTML 3.2//EN">
 <html>
 
@@ -66,7 +66,7 @@
             
             <h3>Nightly tasks</h3>
             <ul>
-                <li><a href="http://scarab.whichever.com/">Runbox</a> (may be temporarily unavailable).</li>
+                <li>Runbox (available again soon)</li>
                 <li><a href="http://www.apache.org/~jon/scarab/nightly/">Nightly CVS HEAD snapshots</a></li>
             </ul>
 
