*** empty log message ***

--- a/buildnotes_jdt-core.html
+++ b/buildnotes_jdt-core.html
@@ -48,9 +48,15 @@ What's new in this drop</h2>
 </ul>
 
 <h3>Problem Reports Fixed</h3>
+<a href="http://bugs.eclipse.org/bugs/show_bug.cgi?id=36307">36307</a>
+JDK1.4.2: Wrong declaring class for clone method on array class
 
 <h3>Problem Reports Closed</h3>
-<a href="http://bugs.eclipse.org/bugs/show_bug.cgi?id=37801">37801</a>
+<a href="http://bugs.eclipse.org/bugs/show_bug.cgi?id=37548">37548</a>
+Array protected methods should use array type as receiver type in bytecodes
+<br><a href="http://bugs.eclipse.org/bugs/show_bug.cgi?id=37840">37840</a>
+NPE in DeltaProcessor using latest JDT/Core version v_353
+<br><a href="http://bugs.eclipse.org/bugs/show_bug.cgi?id=37801">37801</a>
 JDT compiler bug ?
 
 
