*** empty log message ***

--- a/buildnotes_jdt-core.html
+++ b/buildnotes_jdt-core.html
@@ -45,7 +45,7 @@ What's new in this drop</h2>
 some prerequisite binaries are required a JRE level higher than the project target platform; i.e. compiling against 1.4 libraries 
 when deploying for 1.1 platform is likely unwanted.
 <pre>
-* JAVACORE / Reporting Incompatible JDK Level
+* JAVACORE / Reporting Incompatible JDK Level for Required Binaries
 *    Indicate the severity of the problem reported when a project prerequisites another project 
 *    or library with an incompatible target JDK level (e.g. project targeting 1.1 vm, but compiled against 1.4 libraries).
 *     - option id:         "org.eclipse.jdt.core.incompatibleJDKLevel"
