--- a/buildnotes_jdt-core.html
+++ b/buildnotes_jdt-core.html
@@ -65,7 +65,9 @@ ExceptionInInitializerError when using JDTCompilerAdapter
 JDK1.4.2: Wrong declaring class for clone method on array class
 
 <h3>Problem Reports Closed</h3>
-<a href="http://bugs.eclipse.org/bugs/show_bug.cgi?id=37548">37548</a>
+<a href="http://bugs.eclipse.org/bugs/show_bug.cgi?id=36211">36211</a>
+REGRESSION: VerifyError
+<br><a href="http://bugs.eclipse.org/bugs/show_bug.cgi?id=37548">37548</a>
 Array protected methods should use array type as receiver type in bytecodes
 <br><a href="http://bugs.eclipse.org/bugs/show_bug.cgi?id=37840">37840</a>
 NPE in DeltaProcessor using latest JDT/Core version v_353
