--- a/buildnotes_jdt-core.html
+++ b/buildnotes_jdt-core.html
@@ -59,7 +59,9 @@ when deploying for 1.1 platform is likely unwanted.
 </ul>
 
 <h3>Problem Reports Fixed</h3>
-<a href="http://bugs.eclipse.org/bugs/show_bug.cgi?id=37779">37779</a>
+<a href="http://bugs.eclipse.org/bugs/show_bug.cgi?id=37438">37438</a>
+searchenging NPE in searchDeclarationsOfReferencedTypes 
+<br><a href="http://bugs.eclipse.org/bugs/show_bug.cgi?id=37779">37779</a>
 ExceptionInInitializerError when using JDTCompilerAdapter
 <br><a href="http://bugs.eclipse.org/bugs/show_bug.cgi?id=36307">36307</a>
 JDK1.4.2: Wrong declaring class for clone method on array class
