--- a/buildnotes_jdt-core.html
+++ b/buildnotes_jdt-core.html
@@ -69,7 +69,9 @@ ExceptionInInitializerError when using JDTCompilerAdapter
 JDK1.4.2: Wrong declaring class for clone method on array class
 
 <h3>Problem Reports Closed</h3>
-<a href="http://bugs.eclipse.org/bugs/show_bug.cgi?id=36332">36332</a>
+<a href="http://bugs.eclipse.org/bugs/show_bug.cgi?id=37876">37876</a>
+Assertion failure when making a search references 
+<br><a href="http://bugs.eclipse.org/bugs/show_bug.cgi?id=36332">36332</a>
 can't attach more than one source dir to a jar
 <br><a href="http://bugs.eclipse.org/bugs/show_bug.cgi?id=36211">36211</a>
 REGRESSION: VerifyError
