--- a/buildnotes_jdt-core.html
+++ b/buildnotes_jdt-core.html
@@ -59,7 +59,9 @@ when deploying for 1.1 platform is likely unwanted.
 </ul>
 
 <h3>Problem Reports Fixed</h3>
-<a href="http://bugs.eclipse.org/bugs/show_bug.cgi?id=37166">37166</a>
+<a href="http://bugs.eclipse.org/bugs/show_bug.cgi?id=37962">37962</a>
+Unexpected transient problem during reconcile 
+<br><a href="http://bugs.eclipse.org/bugs/show_bug.cgi?id=37166">37166</a>
 NPE in SearchEngine when matching type against ProblemReferenceBinding 
 <br><a href="http://bugs.eclipse.org/bugs/show_bug.cgi?id=37438">37438</a>
 searchenging NPE in searchDeclarationsOfReferencedTypes 
