*** empty log message ***

--- a/buildnotes_jdt-core.html
+++ b/buildnotes_jdt-core.html
@@ -71,7 +71,9 @@ ExceptionInInitializerError when using JDTCompilerAdapter
 JDK1.4.2: Wrong declaring class for clone method on array class
 
 <h3>Problem Reports Closed</h3>
-<a href="http://bugs.eclipse.org/bugs/show_bug.cgi?id=30530">30530</a>
+<a href="http://bugs.eclipse.org/bugs/show_bug.cgi?id=37417">37417</a>
+faster method to clean output folder
+<br><a href="http://bugs.eclipse.org/bugs/show_bug.cgi?id=30530">30530</a>
 Search returns most exact matches as inexact 
 <br><a href="http://bugs.eclipse.org/bugs/show_bug.cgi?id=37876">37876</a>
 Assertion failure when making a search references 
