--- a/buildnotes_jdt-core.html
+++ b/buildnotes_jdt-core.html
@@ -73,7 +73,9 @@ ExceptionInInitializerError when using JDTCompilerAdapter
 JDK1.4.2: Wrong declaring class for clone method on array class
 
 <h3>Problem Reports Closed</h3>
-<a href="http://bugs.eclipse.org/bugs/show_bug.cgi?id=37940">37940</a>
+<a href="http://bugs.eclipse.org/bugs/show_bug.cgi?id=38043">38043</a>
+NPE during rebuild of Java source file
+<br><a href="http://bugs.eclipse.org/bugs/show_bug.cgi?id=37940">37940</a>
 SerialVersionUID conflict between eclipse and ANT based compilations
 <br><a href="http://bugs.eclipse.org/bugs/show_bug.cgi?id=37417">37417</a>
 faster method to clean output folder
