--- a/buildnotes_jdt-core.html
+++ b/buildnotes_jdt-core.html
@@ -59,7 +59,9 @@ when deploying for 1.1 platform is likely unwanted.
 </ul>
 
 <h3>Problem Reports Fixed</h3>
-<a href="http://bugs.eclipse.org/bugs/show_bug.cgi?id=36674">36674</a>
+<a href="http://bugs.eclipse.org/bugs/show_bug.cgi?id=37750">37750</a>
+incorrect handle identifier for IImportContainer
+<br><a href="http://bugs.eclipse.org/bugs/show_bug.cgi?id=36674">36674</a>
 compiler can generate Java 1.4-only bytecode regardless of compatibility settings
 <br><a href="http://bugs.eclipse.org/bugs/show_bug.cgi?id=37962">37962</a>
 Unexpected transient problem during reconcile 
