*** empty log message ***

--- a/buildnotes_jdt-core.html
+++ b/buildnotes_jdt-core.html
@@ -37,6 +37,26 @@
 <li> Plugin version ID got incremented to 3.0.0. 
 </li>
 -->
+
+<p><hr><h1>
+Eclipse Platform Build Notes&nbsp;<br>
+Java Development Tooling Core</h1>
+Eclipse SDK 3.0 Build - ?th May 2003
+<br>Project org.eclipse.jdt.core v_355
+<h2>
+What's new in this drop</h2>
+<ul>
+<li>
+</li>
+</ul>
+
+<h3>Problem Reports Fixed</h3>
+
+<h3>Problem Reports Closed</h3>
+<a href="http://bugs.eclipse.org/bugs/show_bug.cgi?id=37376">37376</a>
+Adding access to parser errors in org.eclipse.jdt.core.jdom
+
+
 <p><hr><h1>
 Eclipse Platform Build Notes&nbsp;<br>
 Java Development Tooling Core</h1>
@@ -56,6 +76,7 @@ when deploying for 1.1 platform is likely unwanted.
 *     - possible values:   { "error", "warning", "ignore" }
 *     - default:           "ignore"
 </pre>
+</li>
 </ul>
 
 <h3>Problem Reports Fixed</h3>
