--- a/buildnotes_jdt-core.html
+++ b/buildnotes_jdt-core.html
@@ -51,6 +51,8 @@ What's new in this drop</h2>
 </ul>
 
 <h3>Problem Reports Fixed</h3>
+<a href="http://bugs.eclipse.org/bugs/show_bug.cgi?id=38124">38124</a>
+Brackets around cast accepted by Eclipse but not javac
 
 <h3>Problem Reports Closed</h3>
 <a href="http://bugs.eclipse.org/bugs/show_bug.cgi?id=37376">37376</a>
