*** empty log message ***

--- a/buildnotes_jdt-core.html
+++ b/buildnotes_jdt-core.html
@@ -55,7 +55,9 @@ this = null; should raise compile time error
 Brackets around cast accepted by Eclipse but not javac
 
 <h3>Problem Reports Closed</h3>
-<a href="http://bugs.eclipse.org/bugs/show_bug.cgi?id=38133">38133</a>
+<a href="http://bugs.eclipse.org/bugs/show_bug.cgi?id=38146">38146</a>
+NPE in compiler
+<br><a href="http://bugs.eclipse.org/bugs/show_bug.cgi?id=38133">38133</a>
 Strange behaviour of task "Nested block depth ...."
 <br><a href="http://bugs.eclipse.org/bugs/show_bug.cgi?id=37376">37376</a>
 Adding access to parser errors in org.eclipse.jdt.core.jdom
