--- a/www/scarab-design.html
+++ b/www/scarab-design.html
@@ -1,4 +1,4 @@
-<!-- $Id: scarab-design.html,v 1.8 2002/10/23 21:48:09 jon Exp $ -->
+<!-- $Id: scarab-design.html,v 1.9 2003/05/28 20:16:02 jmcnally Exp $ -->
 <!doctype html public "-//w3c//dtd html 4.0 transitional//en">
 <html>
 <head>
@@ -7,7 +7,7 @@
 </head>
 <body text="#000000" bgcolor="#FFFFFF" link="#0000FF" vlink="#551A8B" alink="#0000FF">
 <h2>Scarab Design Document </h2>
-<p>Last Updated: $Date: 2002/10/23 21:48:09 $</p>
+<p>Last Updated: $Date: 2003/05/28 20:16:02 $</p>
 <p>This document is broken up into several different &quot;chapters.&quot; 
 <ul>
     <li><a href="#goals">Goals</a></li>
@@ -16,6 +16,7 @@
     <li><a href="#directory">Directory Layout</a></li>
     <li><a href="#system">System Design</a></li>
     <li><a href="#site">Site Layout</a></li>
+    <li><a href="package_dependencies.html">Package dependencies</a></li>
 </ul>
 <hr width="100%" noshade>
 <p><b><a name="goals">Goals</a></b> 
